/*
package io.github.some_example_name

class Player {
    private var _name: String = ""
    var name: String
        get() = _name
        set(value) { _name = value }

    private var _gold: Int = 10
    var gold: Int
        get() = _gold
        set(value) { _gold = value }

    private var _turn: Int = 1
    var turn: Int
        get() = _turn
        set(value) { _turn = value }

    private var _team = Team()
    var team: Team
        get() = _team
        set(value) { _team = value }

    private var _shop = Shop()
    var shop: Shop
        get() = _shop
        set(value) { _shop = value }

    private var _shopController = ShopController(this)
    var shopController: ShopController
        get() = _shopController
        set(value) { _shopController = value }
}
*/
